# copier-python-hatch-template

./: .coveragerc  .markdownlint.yml  .pre-commit-config.yaml  404.html  LICENSE  README.md  copier.yml  generate.html  index.html  license.html  mkdocs.yml  mypy.ini  prerequisites.html  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: deploy.yml  deploy.yml.bak  gh-deploy.yml  gh-pages-deploy.yml  test.yml.draft
extensions/: date.py  git.py  slugify.py
mkdocs/: generate.md  index.md  license.md  prerequisites.md
project/: .gitignore  .pylintrc  LICENSE.jinja  README.md.jinja  bandit.yml  mkdocs.yml.jinja  pyproject.toml.jinja  pytest.ini
project/.github/workflows/: ci.yml  codeql.yml  gh-pages-deploy.yml
project/mkdocs/: index.md.jinja  license.md
project/src/{{ python_package_import_name }}/: __about__.py.jinja  calc.py
project/src/{{ python_package_import_name }}/cli/: __init__.py.jinja
project/tests/: __init__.py.jinja  test_calc.py.jinja
search/: search_index.js  search_index.json
src/copier_python_hatch_template/: __about__.py
tests/: __init__.py  test_template.py
